# arch-flux

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  README.adoc
.cargo/: config.toml
src/: djb2a.ixx  format_disk.c  format_disk.cc  main.cc  typedefs.h  typedefs.hh
