[package]
name = "arch_flux"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.10.4"
cryptsetup-rs = "0.3.2"
nix = { version = "0.29.0", features = ["fs", "ioctl"] }
libparted-sys = "0.3.2"
libcryptsetup-rs = "0.9.3"
libcryptsetup-rs-sys = "0.4.0"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
console = "0.15.0"
