[package]
name = "arch_flux"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.10.4"
nix = { version = "0.29.0", features = ["fs", "ioctl"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
libcryptsetup-rs = "0.9.3"
libcryptsetup-rs-sys = "0.4.0"
fs_extra = "1.3.0"
anyhow = "1.0.86"
walkdir = "2.5.0"
